<resources>

    <!-- Global -->
    <string name="app_name">My Schedule</string>
    <string name="app_full_name">My Schedule</string>

    <!-- Menu -->
    <string name="nav_header_title">Menu</string>
    <string name="menu_calendar">Calendar</string>
    <string name="menu_clients">Clients</string>
    <string name="menu_service">Procedures</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>

    <string name="time">Time</string>
    <string name="number">No.</string>
    <string name="procedure">Service</string>
    <string name="client">Client</string>
    <string name="phone">Phone</string>
    <string name="notes">Notes</string>
    <string name="button_edit">Edit</string>
    <string name="button_delete">Delete</string>
    <string name="add_appointment_title">Appointment</string>
    <string name="add_client_title">Client</string>
    <string name="add_procedure_title">Service</string>
    <string name="day">Day</string>
    <string name="example_date">01/01/2022</string>
    <string name="example_time">09:00 AM</string>
    <string name="example_procedure">Procedure</string>
    <string name="example_client">Client Name</string>
    <string name="example_phone">8 800 123–45-67</string>
    <string name="example_notes">…</string>
    <string name="choose_previous_month">Choose previous month</string>
    <string name="choose_next_month">Choose next month</string>
    <string name="month_text_view">January</string>
    <string name="year_text_view">2022</string>
    <string name="release_year">2023</string>
    <string name="appointments_count">Appointments found: %d</string>
    <string name="clients_count">Clients found: %d</string>

    <!-- Week days -->
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>

    <string name="appointments_search_hint">Search in Schedule</string>
    <string name="appointments_full_month_view">View full month</string>
    <string name="clients_search_hint">Search in Clients</string>
    <string name="procedures_search_hint">Search in Services</string>
    <string name="search_client">Search</string>
    <string name="name">Name</string>
    <string name="date">Date</string>
    <string name="time_text">Time</string>
    <string name="toggle_button_search_name">Name:</string>
    <string name="toggle_button_search_phone">Phone:</string>
    <string name="search_client_by_phone">Phone:</string>

    <!-- Support email settings -->
    <string name="support_email">scheduleapp@mail.ru</string>
    <string name="support_email_uri">mailto:scheduleapp@mail.ru</string>
    <string name="support_subject">My Schedule App. Errors.</string>
    <string name="support_body">This email contains logs for error analysis.</string>
    <string name="dark_theme_settings_title">Dark Theme</string>
    <string name="app_fullname">My Schedule</string>
    <string name="save_changes_button">Save</string>
    <string name="cancel__button">Cancel</string>
    <string name="avatar_description">clickable client avatar</string>
    <string name="date_edit">edit date</string>
    <string name="select_previous_month">select previous month</string>
    <string name="edit_appointment">edit appointment</string>
    <string name="delete_appointment">delete appointment</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="really_delete_text">Delete appointment?</string>
    <string name="calendar_cell_example">10</string>
    <string name="fragment_date_title">List of Appointments</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="client_select_title">Select a client from the list</string>
    <string name="single_date_example">10</string>
    <string name="no_data_example">No data</string>
    <string name="no_appointments_text">No appointments</string>

    <!-- Social links -->
    <string name="vk_text">VK</string>
    <string name="telegram_text">Telegram</string>
    <string name="telegram_hint">Link https://t.me/ or Phone or Username</string>
    <string name="instagram_text">Instagram</string>
    <string name="whatsapp_text">WhatsApp</string>
    <string name="vk_link_hint">Link https://vk.com/id/… or id or Username</string>
    <string name="instagram_link_hint">https://instagram.com/… or Username</string>
    <string name="add_procedure_title2">Add/Modify Service in Database</string>
    <string name="price_example">Price</string>
    <string name="price_hint">1000</string>

    <string name="app_version">Version</string>
    <string name="no_data_title">No appointments</string>
    <string name="total_appointments_title">%1$s %2$d</string>

    <string name="toast_created">Appointment created</string>
    <string name="client_created">Client saved: %1$s</string>
    <string name="procedure_created">Procedure saved: %1$s</string>
    <string name="procedure_deleted">Procedure deleted: %1$s</string>
    <string name="toast_edited">Appointment edited</string>
    <string name="new_appointment_text">New appointment</string>
    <string name="change_appointment_text">Edit appointment</string>
    <string name="deleted_appointment_text">Appointment deleted: %1$s</string>
    <string name="restored_appointment_text">Appointment restored: %1$s</string>
    <string name="deleted_client_text">Client deleted: %1$s</string>

    <string name="unknown_error">Something went wrong</string>
    <string name="no_phone_number_error">No phone number</string>
    <string name="language">Language</string>
    <string name="temp_text">Coming soon, there will be a lot of interesting content here.</string>

    <string-array name="languages">
        <item>Russian</item>
        <item>English</item>
    </string-array>

    <string name="january">January</string>
    <string name="february">February</string>
    <string name="march">March</string>
    <string name="april">April</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="august">August</string>
    <string name="september">September</string>
    <string name="october">October</string>
    <string name="november">November</string>
    <string name="december">December</string>

    <string name="import_description">Information from the Documents folder will be imported into the app.</string>
    <string name="export_description">All information will be saved in the Documents folder.</string>

    <string name="import_button_text">Import Data</string>
    <string name="export_button_text">Export Data</string>

    <string name="permission_granted">Access Granted</string>
    <string name="imported">Files Imported</string>
    <string name="exported">Files Exported</string>
    <string name="import_export_intro">If you need to transfer app data (records, clients, etc.) to another device or create a backup of it, you can use the import and export data feature.</string>
    <string name="grant_permissions">Grant Access</string>
    <string name="menu_import_export">Import/Export</string>

    <string name="no_data_error">No data</string>

    <string name="update_app_toast">Download successful. Restarting app in 5 seconds</string>
    <string name="appointment_set_client_name">appointment set client name</string>
    <string name="appointment_set_time">appointment set time</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails</string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="already_done">"Already done!"</string>

    <string name="change_application_theme">"Change application theme"</string>
    <string name="send_feedback">"Send feedback"</string>
    <string name="report_technical_issues_or_suggest_new_features">"Report technical issues or suggest new features"</string>
    <string name="set_as_theme">Set as Theme</string>
    <string name="set_dark_theme">Dark Theme</string>
    <string name="formatted_date">Установить цвет для даты %1$s</string>
    <string name="faq">Часто задаваемые вопросы</string>
    <string name="my_account">Мой Аккаунт</string>
    <string name="warning_message"><![CDATA[Нажимая <b>Согласен</b>, вы подтверждаете своё согласие на передачу данных о записях на сервер \n - Мы не несем ответственности за возможные потери данных или ошибки, вызванные использованием функции синхронизации. Вы можете отключить её в любой момент в настройках приложения.]]></string>

    <string name="menu_premium">Премиум</string>
    <string name="billing_start_purchases">Перейти к покупке Premium</string>

    <string name="billing_common_ok">ОК</string>
    <string name="billing_common_later">Позже</string>
    <string name="billing_common_error">Что-то пошло не так</string>

    <string name="billing_products_tab">Продукты</string>
    <string name="billing_purchases_tab">Покупки</string>

    <string name="billing_name">Name:</string>
    <string name="billing_type">Type:</string>
    <string name="billing_state">State:</string>
    <string name="billing_price">Price:</string>
    <string name="billing_quantity">Quantity:</string>

    <string name="billing_buy_product">Покупка продукта</string>
    <string name="billing_confirm_purchase">Подтверждение покупки</string>
    <string name="billing_delete_purchase">Отмена покупки</string>

    <string name="billing_general_error">Ошибка</string>
    <string name="billing_purchase_result">Статус покупки продукта</string>
    <string name="billing_purchase_confirm_in_progress">Подтверждаем покупку…</string>
    <string name="billing_purchase_delete_in_progress">Удаляем покупку…</string>
    <string name="billing_product_confirmed">Продукт подтвержден</string>
    <string name="billing_product_deleted">Покупка отменена</string>

    <string name="billing_purchase_product_id_null">Некорректный параметр: productId</string>
    <string name="billing_purchase_order_id_null">Некорректный параметр: orderId</string>
    <string name="billing_purchase_quantity_null">Некорректный параметр: quantity</string>

    <string name="billing_empty_products_list">Пустой список продуктов</string>

    <string name="billing_product_type_non_consumable">Непотребляемый продукт</string>
    <string name="billing_product_type_consumable">Потребляемый продукт</string>
    <string name="billing_product_type_subscription">Подписка</string>

    <string name="billing_product_status_active">Активный продукт</string>
    <string name="billing_product_status_inactive">Неактивный продукт</string>

</resources>