<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_calendar"
            android:icon="@drawable/ic_baseline_calendar_month_24"
            android:title="@string/menu_calendar" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_baseline_account_box_36"
            android:title="@string/my_account" />
        <item
            android:id="@+id/nav_clients"
            android:icon="@drawable/ic_baseline_people_alt_24"
            android:title="@string/menu_clients" />
        <item
            android:id="@+id/nav_procedures"
            android:icon="@drawable/baseline_attach_money_24"
            android:title="@string/menu_service" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_import_export"
            android:icon="@drawable/baseline_import_export_24"
            android:title="@string/menu_import_export" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/menu_about" />
    </group>
</menu>