<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        app:icon="@drawable/baseline_color_lens_24"
        app:key="theme"
        app:title="@string/change_application_theme" />

    <Preference
        app:icon="@drawable/baseline_announcement_24"
        app:key="feedback"
        app:summary="@string/report_technical_issues_or_suggest_new_features"
        app:title="@string/send_feedback" />

    <SwitchPreference
        app:icon="@drawable/baseline_cloud_connected_24"
        app:key="synchronization"
        app:summary="Включить/Выключить синхронизацию"
        app:title="Синхронизация (beta)" />

    <Preference
        app:icon="@drawable/baseline_question_mark_24"
        app:key="faq"
        app:title="@string/faq" />

</PreferenceScreen>