<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_calendar">

    <fragment
        android:id="@+id/nav_calendar"
        android:name="com.example.projectnailsschedule.ui.calendar.CalendarFragment"
        android:label="@string/menu_calendar"
        tools:layout="@layout/fragment_calendar">
        <action
            android:id="@+id/action_nav_calendar_to_nav_clients"
            app:destination="@id/nav_clients" />
        <action
            android:id="@+id/action_nav_calendar_to_nav_price"
            app:destination="@id/nav_price" />
        <action
            android:id="@+id/action_nav_calendar_to_nav_settings"
            app:destination="@id/nav_settings" />
        <action
            android:id="@+id/action_nav_calendar_to_nav_about2"
            app:destination="@id/nav_about" />
        <action
            android:id="@+id/action_nav_calendar_to_nav_search2"
            app:destination="@id/nav_search"
            app:enterAnim="@android:anim/fade_in"
            app:exitAnim="@android:anim/fade_out"
            app:popEnterAnim="@android:anim/fade_in"
            app:popExitAnim="@android:anim/fade_out" />
        <action
            android:id="@+id/action_nav_calendar_to_dateFragment"
            app:destination="@id/nav_date" />
    </fragment>

    <fragment
        android:id="@+id/nav_clients"
        android:name="com.example.projectnailsschedule.ui.clients.ClientsFragment"
        android:label="@string/menu_clients"
        tools:layout="@layout/fragment_clients" />

    <fragment
        android:id="@+id/nav_price"
        android:name="com.example.projectnailsschedule.ui.price.PriceFragment"
        android:label="@string/menu_service"
        tools:layout="@layout/fragment_price" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.projectnailsschedule.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.projectnailsschedule.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.projectnailsschedule.ui.search.SearchFragment"
        android:label="@string/search_client"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/nav_appointment"
        android:name="com.example.projectnailsschedule.ui.appointment.AppointmentFragment"
        android:label="AppointmentFragment" />

    <fragment
        android:id="@+id/nav_date"
        android:name="com.example.projectnailsschedule.ui.date.DateFragment"
        android:label="DateFragment">
        <action
            android:id="@+id/action_dateFragment_to_appointmentFragment"
            app:destination="@id/nav_appointment" />
    </fragment>
</navigation>