<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageButton
        android:id="@+id/client_avatar"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:layout_margin="8dp"
        android:adjustViewBounds="true"
        android:background="#00000000"
        android:contentDescription="@string/avatar_description"
        android:cropToPadding="false"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_baseline_face_48"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/COLUMN_START_TEXT"
        android:layout_width="120dp"
        android:layout_height="21dp"
        android:layout_margin="16dp"
        android:text="@string/time"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/client_avatar"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/COLUMN_END_TEXT"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/procedure"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/client_avatar"
        app:layout_constraintTop_toBottomOf="@id/COLUMN_START_TEXT" />

    <TextView
        android:id="@+id/appointment_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/example_time"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/COLUMN_START_TEXT"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/appointment_procedure"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/example_procedure"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/COLUMN_END_TEXT"
        app:layout_constraintTop_toBottomOf="@id/appointment_time" />

    <TextView
        android:id="@+id/COLUMN_NAME_TEXT"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/client"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/client_avatar"
        app:layout_constraintTop_toBottomOf="@id/COLUMN_END_TEXT" />

    <TextView
        android:id="@+id/appointment_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/name"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/COLUMN_NAME_TEXT"
        app:layout_constraintTop_toBottomOf="@+id/appointment_procedure" />

    <TextView
        android:id="@+id/COLUMN_PHONE_NAME"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/phone"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/client_avatar"
        app:layout_constraintTop_toBottomOf="@id/COLUMN_NAME_TEXT" />

    <TextView
        android:id="@+id/appointmentName_phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/example_phone"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/COLUMN_PHONE_NAME"
        app:layout_constraintTop_toBottomOf="@id/appointment_name" />

    <TextView
        android:id="@+id/COLUMN_MISC_NAME"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/misc"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="16sp"
        app:layout_constraintStart_toEndOf="@+id/client_avatar"
        app:layout_constraintTop_toBottomOf="@id/COLUMN_PHONE_NAME" />

    <TextView
        android:id="@+id/appointment_misc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:text="@string/example_misc"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/COLUMN_MISC_NAME"
        app:layout_constraintTop_toBottomOf="@id/appointmentName_phone" />

    <ImageView
        android:id="@+id/border_line_appointment_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_margin="8dp"
        android:layerType="software"
        android:src="@drawable/border_line_appointment_recycler_view"
        app:layout_constraintTop_toBottomOf="@id/COLUMN_MISC_NAME" />

</androidx.constraintlayout.widget.ConstraintLayout>